--- a/settings.json
+++ b/settings.json
@@ -5,8 +5,8 @@
 "autorecording": false,
 "gamewaktu": 60,
 "NamaBot":"PUTTBOTZ",
-"NomorOwner":"6285854721440",
-"NamaOwner":"Denz",
+"NomorOwner":"601159777723",
+"NamaOwner":"AdamWfq",
 "ZeksApi":"twBHoFu3AnqfE6f2rwAuirfTVgh",
 "zerkey":"ZeroYT7",
 "HunterApi":"Ikyy69"
